# eos

./: .buildinfo  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.yml  docker-compose.yml  genindex.html  index.html  llms.txt  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/user-guide/: beacon_optimizer.doctree  campaigns.doctree  color_mixing.doctree  configuration.doctree  devices.doctree  experiments.doctree  index.doctree  infrastructure_setup.doctree  installation.doctree  jinja2_templating.doctree  laboratories.doctree  mcp.doctree  multi_computer_setup.doctree  optimizers.doctree  packages.doctree  protocols.doctree  references.doctree  resources.doctree  rest_api.doctree  running.doctree  scheduling.doctree  sila2_integration.doctree  tasks.doctree  web_ui.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/user-guide/: campaigns.rst.txt  color_mixing.rst.txt  devices.rst.txt  experiments.rst.txt  index.rst.txt  infrastructure_setup.rst.txt  installation.rst.txt  jinja2_templating.rst.txt  laboratories.rst.txt  mcp.rst.txt  optimizers.rst.txt  packages.rst.txt  references.rst.txt  resources.rst.txt  scheduling.rst.txt  sila2_integration.rst.txt  tasks.rst.txt  web_ui.rst.txt
_static/: custom.css  documentation_options.js
docs/: conf.py  index.rst
docs/user-guide/: beacon_optimizer.rst  campaigns.rst  color_mixing.rst  devices.rst  experiments.rst  index.rst  installation.rst  laboratories.rst  mcp.rst  multi_computer_setup.rst  optimizers.rst  packages.rst  protocols.rst  references.rst  resources.rst  rest_api.rst  scheduling.rst  sila2_integration.rst  tasks.rst  web_ui.rst
eos/: eos.py
eos/allocation/: allocation_manager.py  exceptions.py
eos/campaigns/: campaign_executor.py  campaign_executor_factory.py  campaign_manager.py  campaign_optimizer_manager.py
eos/cli/: db_cli.py  orchestrator_cli.py  pkg_cli.py  ray_cli.py  sim_cli.py  update_cli.py  web_cli.py
eos/configuration/: configuration_manager.py  constants.py  def_sync.py  env.py  eos_config.py  exceptions.py  experiment_graph.py  packages.py  protocol_graph.py  registries.py  spec_sync.py  utils.py  validation.py
eos/containers/: container_manager.py
eos/database/: abstract_sql_db_interface.py  alembic_commands.py  exceptions.py  file_db_interface.py  models.py  postgresql_db_interface.py  sqlite_db_interface.py
eos/devices/: base_device.py  device_actor_utils.py  device_manager.py
eos/experiments/: experiment_executor.py  experiment_executor_factory.py  experiment_manager.py
eos/integrations/: __init__.py
eos/logging/: buffer_handler.py  log_buffer.py  logger.py  rich_console_handler.py
eos/optimization/: abstract_sequential_optimizer.py  beacon_ai_agent.py  beacon_optimizer.py  claude_agent_sdk_model.py  sequential_bayesian_optimizer.py  sequential_optimizer_actor.py
eos/orchestration/: exceptions.py  orchestrator.py  work_signal.py
eos/protocols/: exceptions.py  protocol_executor.py  protocol_executor_factory.py  protocol_run_manager.py
eos/resource_allocation/: resource_allocation_manager.py
eos/resources/: exceptions.py  resource_manager.py
eos/scheduling/: abstract_scheduler.py  base_scheduler.py  cpsat_scheduler.py  cpsat_scheduling_model_builder.py  cpsat_scheduling_solver.py  greedy_scheduler.py  scheduler_factory.py  simulation.py  utils.py
eos/tasks/: base_task.py  on_demand_task_executor.py  task_executor.py  task_input_parameter_caster.py  task_input_resolver.py  task_manager.py
eos/utils/: profiler.py  ray_utils.py  timer.py
eos/web_api/: dependencies.py  exception_handling.py
scripts/: install_worker.py
scripts/dev/: docs_build.py  docs_build_gh.py  format.py  generate_llms_txt.py  lint.py  test.py
scripts/migration/: migrate_experiment_to_protocol.py
tests/: conftest.py  fixtures.py  test_config.yml
tests/allocation/: test_allocation_manager.py
tests/campaigns/: test_campaign_executor.py  test_campaign_manager.py
tests/configuration/: test_configuration_manager.py  test_device_actor_utils.py  test_identifier_pattern.py  test_lab_validation.py  test_multi_lab_validation.py  test_task_def.py  test_task_input_parameter_validator.py  test_task_parameter_groups.py  test_task_specification_validation.py
tests/devices/: test_base_device.py  test_device_manager.py
tests/experiments/: test_experiment_executor.py  test_experiment_graph.py  test_experiment_manager.py
tests/loading/: test_loading_service.py
tests/optimization/: test_bayesian_sequential_optimizer.py  test_beacon_optimizer.py
tests/protocols/: test_protocol_executor.py  test_protocol_graph.py  test_protocol_run_manager.py
tests/resources/: test_resource_manager.py
tests/scheduling/: test_cpsat_scheduler.py  test_greedy_scheduler.py  test_hold_scheduling.py
tests/tasks/: test_base_task.py  test_on_demand_task_executor.py  test_task_executor.py  test_task_input_resolver.py  test_task_manager.py
user-guide/: beacon_optimizer.html  campaigns.html  color_mixing.html  configuration.html  devices.html  experiments.html  index.html  infrastructure_setup.html  installation.html  jinja2_templating.html  laboratories.html  mcp.html  multi_computer_setup.html  optimizers.html  packages.html  protocols.html  references.html  resources.html  rest_api.html  running.html  scheduling.html  sila2_integration.html  tasks.html  web_ui.html
user/example/: README.md  pyproject.toml
web_ui/: .dockerignore  .env.docker.example  .env.example  .env.prod.example  .gitignore  Dockerfile  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
web_ui/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
web_ui/contexts/: LogPanelContext.tsx  OrchestratorStatusContext.tsx
web_ui/hooks/: useDebouncedValue.ts  useExperimentValidation.ts  useLogStream.ts  useOrchestratorStatus.ts  useProtocolValidation.ts  useServerTable.ts
web_ui/lib/: env.ts  format.ts  transfers.ts
(+391 files in other folders)
